@@ -7,7 +7,7 @@ function atomic_number(atom)
   character(len=2) :: atom
   integer :: atomic_number
 
-  character(len=2) :: elements(94) 
+  character(len=2) :: elements(103) 
   data elements/' H',                              'He', &
                 'Li','Be',' B',' C',' N',' O',' F','Ne', &
                 'Na','Mg','Al','Si',' P',' S','Cl','Ar', &
@@ -22,7 +22,8 @@ function atomic_number(atom)
                                'Hf','Ta',' W','Re','Os', &
                           'Ir','Pt','Au','Hg',           &
                           'Tl','Pb','Bi','Po','At','Rn', &
-                'Fr','Ra','Ac','Th','Pa',' U','Np','Pu' /
+                'Fr','Ra','Ac','Th','Pa',' U','Np','Pu', &
+                'Am','Cm','Bk','Cf','Es','Fm','Md','No', 'Lr' /
   character(len=1), external :: capital, lowercase
   integer :: n
 
@@ -36,7 +37,7 @@ function atomic_number(atom)
      atom(2:2)=lowercase(atom(2:2))
   end if
       
-  do n=1,94
+  do n=1, 103
      if ( atom == elements(n) ) then
         atomic_number=n
         return
@@ -56,7 +57,7 @@ function atom_name(atomic_number)
   integer :: atomic_number
   character(len=2) :: atom_name
 
-  character(len=2) :: elements(94)
+  character(len=2) :: elements(103)
   data elements/' H',                              'He', &
                 'Li','Be',' B',' C',' N',' O',' F','Ne', &
                 'Na','Mg','Al','Si',' P',' S','Cl','Ar', &
@@ -71,9 +72,10 @@ function atom_name(atomic_number)
                                'Hf','Ta',' W','Re','Os', &
                           'Ir','Pt','Au','Hg',           &
                           'Tl','Pb','Bi','Po','At','Rn', &
-                'Fr','Ra','Ac','Th','Pa',' U','Np','Pu' /
+                'Fr','Ra','Ac','Th','Pa',' U','Np','Pu', &
+                'Am','Cm','Bk','Cf','Es','Fm','Md','No', 'Lr' /
 
-  if (atomic_number < 1 .or. atomic_number > 94) then
+  if (atomic_number < 1 .or. atomic_number > 103) then
      call errore('atom_name','invalid atomic number',1000+atomic_number)
   else
      atom_name=elements(atomic_number)
